--- a/clase34.css
+++ b/clase34.css
@@ -31,35 +31,27 @@ body {
   }
 
   .celeste {
-    background: #22a6b3;
-  }
-
-  .celeste.light {
-    background: #7ed6df;
+    background: #0033D3;
+    opacity: 12;
   }
 
   .violeta {
-    background: #be2edd;
-  }
-
-  .violeta.light {
-    background: #e056fd;
+    background: #E50509;
+    opacity: 12;
   }
 
   .naranja {
-    background: #f0932b;
-  }
-
-  .naranja.light {
-    background: #ffbe76;
+    background: #FFFA00;
+    opacity: 12;
   }
 
   .verde {
-    background: #6ab04c;
+    background: #24EA00;
+    opacity: 12;
   }
 
-  .verde.light {
-    background: #badc58;
+  .light {
+      opacity: 0.3;
   }
 
   .btn-start {
@@ -76,3 +68,41 @@ body {
   .hide {
     display: none;
   }
+
+  * {
+      font-family: 'Arial';
+  }
+  .cursor {
+    cursor: pointer;
+  }
+  .info {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    margin-top: 30px;
+    margin-left: 20px;
+    border: 1px solid transparent;
+    box-shadow: -5px 5px 15px 0px rgba(161, 156, 156, 0.75);
+    background-size: 10px 10px;
+  }
+
+  #simon {
+    top: 15px;
+    width: 100%;
+    position: absolute;
+    color: rgb(0, 0, 0);
+    text-align: center;
+  }
+
+  #container {
+    width: 100%;
+    padding: 0;
+    text-align: center;
+    margin: 0 auto;
+    
+}
